Trying to make the concurrency work